--- a/assets/css/style_custom.css
+++ b/assets/css/style_custom.css
@@ -6,6 +6,7 @@ h1, h2, h3, h4, h5, h6 {
 .responsive-img {
    /* margin: 0;*/
     max-height: 100px;
+    /*max-width: 100px;*/
     padding-bottom: 10px;
     text-align: center;
     /*vertical-align: middle;*/
